	* Added sub-name support in configuration fields (like "[svpd:streams:volume]"), refs: #2645.
	* Added a way for plugins to provide their conf requirements, closes: #2645.
	* Fix conflict between webengine-delivery and spvd-delivery, closes: #2613.
	* Now catches all plugins exceptions, closes: #2641.
	* Now uses python logging facilities, closes: #2655.
	* Moved events and delivery plugins to their own debian packages, refs: #2665.

Version 0.3.1 Released on 2009/10/29

	* Updated importer call due to changes in webengine-delivery, refs: #2436, 2343.

Version 0.3.0 Released on 2009/10/27

	* Added delivery plugin sets metadata for delivery selected, closes: #2436.
	* Use __import__ and getattr() to load and run plugins, closes: #2427.
	* Use __import__ and getattr() in checks-list to load and check plugins, closes: #2427.

Version 0.2.1 Released on 2009/07/02

	* Add support for SSL certificates, closes: #2051.
	* Add a __str__ method to BasePlugin.
	* Batch checks result updates, closes: #2087.

Version 0.2.0 Released on 2009/06/25

	* Use ThreadPool from sjutils and replace custom task managment, closes: #1992.
	* Use check id directly for WorkRequest since it already is unique.
	* Return False if there is an exception during plugin startup.
	* Be more verbose when a check raises an exception.
	* Use qsize to show work queue lenght.
	* Do not kill plugin thread when a check fails to save its status.
	* Make sure qsize crazy output cannot be passed to get_checks.
	* Fix fd and memory leak due to urllib2, closes: #2052.

Version 0.1.1 Released on 2009/05/25

	* Fix streams plugin to actually work.
	* Make streams plugin more configurable.
	* Rework stream plugin to work directly with streams.
	* Filter by actual streams to monitor (gis2spv).
	* Use Lisardo's request to load spv (gis2spv).
	* Fix lintian warning about distributing non-executable scripts starting
	  with a shebang.

Version 0.1.0 Released on 2009/05/12

	* Initial release, closes: #1848.