@@ -9,6 +9,7 @@ Version 0.4.0~dev
 	* Now catches all plugins exceptions, closes: #2641.
 	* Now uses python logging facilities, closes: #2655.
 	* Moved events and delivery plugins to their own debian packages, refs: #2665.
+	* Now spvd automatically detects its plugins checks, closes: #2675.
 
 Version 0.3.1 Released on 2009/10/29
 
